# bamqc

./: .gitignore  Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: flag_stat.rs  insert_size.rs  lib.rs
crates/io/: Cargo.toml
crates/io/src/: bam.rs  lib.rs
pytest/: calc_insert_size.py
src/: main.rs  main_with_io.rs
