[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
thiserror = "2.0.17"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
noodles = { version = "0.101.0", features = ["bam", "sam", "core", "bgzf", "bed"] }

[package]
name = "bamqc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
noodles = { workspace = true }
thiserror = { workspace = true }
bamqc-io = { path = "crates/io" }
bamqc-core = { path = "crates/core" }
